--- a/pagina.html
+++ b/pagina.html
@@ -1,7 +1,7 @@
-<!-- <!DOCTYPE html>  -->
+<!-- <!DOCTYPE html> 
 <html lang="en">
 <head>
-    <!-- en caso que no funcione las tildes agrego la etiqueta meta <meta charset="utf-8" />-->
+    en caso que no funcione las tildes agrego la etiqueta meta <meta charset="utf-8" />-->
     
  <!-- <title>Mi primera programada</title> -->
     <!-- <script> 
@@ -14,4 +14,4 @@
     <h1>primer intento de website</h1>
     <p>este es nuestro primer programa completo y profesional</p>
 </body>
-</html>
+</html> -->
